--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="pattern"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JDK7"/>
 	<classpathentry kind="lib" path="lib/HJSLNotifier.jar"/>
 	<classpathentry kind="lib" path="lib/jedis.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
@@ -11,5 +10,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/commons-pool.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/netty-all-4.0.45.Final.jar" sourcepath="D:/java-jar/netty-4.0.45.Final/jar/all-in-one/netty-all-4.0.45.Final-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
